# mlops

./: .dvcignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  data.dvc  environment.yml  infer.py  models.dvc  pyproject.toml  train.py
.dvc/: config
configs/: config.yaml
data/: raw.dvc
mlops/: consts.py  infer_model.py  prepare_dataset.py  train_model.py  utils.py
models/: .gitignore  net.onnx.dvc
src/pipe/: consts.py  evaluate.py  infer.py  net.py  prepare.py  train.py  utils.py
